crates/scribe2/tests/e2e/snapshots/e2e__seat__seat_doctor_external_form.snap
---
source: crates/scribe2/tests/e2e/seat.rs
expression: form
---
seat: role=orchestrator anchor=/repo target=rolesdoc:rolesdoc account=acct-1 model=- paths=default
seats: registered=1 live=unmeasurable missing=unmeasurable
host-manifest=absent
consumer=/repo source=launch scope=- binary=unrecorded plugin=unrecorded ledger=- cache=absent head=undeclared drift=unrecorded
